GNOME Bugzilla – Bug 749325
dtlsconnection: Memory leak
Last modified: 2015-05-13 16:12:07 UTC
Created attachment 303322 [details] [review] dtlsconnection: Fix memory leak while setting closure Attached a patch to solve the issue
I think instead of closures these should just be function pointers, but that's independent of this patch :) commit c44acd8bde9c256f2fa0312485605374cdb1b8af Author: Jose Antonio Santos Cadenas <santoscadenas@gmail.com> Date: Wed May 13 17:19:25 2015 +0200 dtlsconnection: Fix memory leak while setting closure https://bugzilla.gnome.org/show_bug.cgi?id=749325