dtlsconnection: Fix memory leak while setting closure

https://bugzilla.gnome.org/show_bug.cgi?id=749325